[gd_scene load_steps=2 format=3 uid="uid://dh6ossgqj7k0h"]

[ext_resource type="Script" path="res://menu/lobby.gd" id="1_1jymc"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jymc")

[node name="Players" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.0980903
offset_left = 23.0
offset_top = 33.0
offset_right = 241.0
offset_bottom = 321.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Players"]
layout_mode = 0
offset_left = 4.0
offset_right = 55.0
offset_bottom = 23.0
text = "Players:"

[node name="PlayerNames" type="VBoxContainer" parent="Players"]
layout_mode = 0
offset_left = 3.0
offset_top = 26.0
offset_right = 326.0
offset_bottom = 287.0

[node name="Characters" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0104167
anchor_top = -0.24537
anchor_right = 0.0269097
anchor_bottom = -0.0308642
offset_left = 367.0
offset_top = 193.0
offset_right = 585.0
offset_bottom = 342.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Characters"]
layout_mode = 0
offset_left = 4.0
offset_right = 55.0
offset_bottom = 23.0
text = "Characters"

[node name="CharacterNames" type="VBoxContainer" parent="Characters"]
layout_mode = 0
offset_left = 2.0
offset_top = 26.0
offset_right = 236.0
offset_bottom = 282.0

[node name="Chat" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 782.0
offset_top = 24.0
offset_right = 1127.0
offset_bottom = 576.0
grow_horizontal = 0
grow_vertical = 2

[node name="ChatLines" type="VBoxContainer" parent="Chat"]
layout_mode = 0
offset_top = 1.0
offset_right = 342.0
offset_bottom = 513.0

[node name="Message" type="LineEdit" parent="Chat"]
layout_mode = 0
offset_left = 2.0
offset_top = 517.0
offset_right = 341.0
offset_bottom = 548.0

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 637.0
offset_top = 289.0
offset_right = 733.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1084.0
offset_top = 594.0
offset_right = 1121.0
offset_bottom = 625.0
text = "Exit"

[connection signal="text_submitted" from="Chat/Message" to="." method="_on_message_text_submitted"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
